--- a/api/crds/kubefox.xigxog.io_deployments.yaml
+++ b/api/crds/kubefox.xigxog.io_deployments.yaml
@@ -17,7 +17,7 @@ spec:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: Deployment is the Schema for the deployments API
+        description: Deployment is the Schema for the Deployments API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -57,7 +57,6 @@ spec:
                     type: string
                 required:
                 - commit
-                - containerRegistry
                 - name
                 type: object
               components:
@@ -66,14 +65,73 @@ spec:
                     commit:
                       pattern: ^[a-z0-9]{40}$
                       type: string
+                    defaultHandler:
+                      type: boolean
+                    dependencies:
+                      additionalProperties:
+                        properties:
+                          type:
+                            enum:
+                            - kubefox
+                            - http
+                            type: string
+                        required:
+                        - type
+                        type: object
+                      type: object
                     description:
                       type: string
+                    envSchema:
+                      additionalProperties:
+                        properties:
+                          description:
+                            type: string
+                          required:
+                            type: boolean
+                          title:
+                            type: string
+                          type:
+                            enum:
+                            - array
+                            - boolean
+                            - number
+                            - string
+                            type: string
+                          unique:
+                            type: boolean
+                        required:
+                        - required
+                        - type
+                        - unique
+                        type: object
+                      type: object
                     image:
                       type: string
+                    routes:
+                      items:
+                        properties:
+                          id:
+                            type: integer
+                          priority:
+                            type: integer
+                          rule:
+                            type: string
+                        required:
+                        - id
+                        - rule
+                        type: object
+                      type: array
                     title:
+                      type: string
+                    type:
+                      enum:
+                      - kubefox
+                      - http
                       type: string
                   required:
                   - commit
+                  - defaultHandler
+                  - type
                   type: object
                 type: object
             required:
@@ -85,8 +143,6 @@ spec:
             properties:
               ready:
                 type: boolean
-            required:
-            - ready
             type: object
         type: object
     served: true
