--- a/components/operator/templates/broker/service-headless.yaml
+++ b/components/operator/templates/broker/service-headless.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ componentFullName }}-headless
+  name: {{ .Component.Name }}-headless
   namespace: {{ namespace }}
   labels:
     {{- include "labels" . | nindent 4 }}
