--- a/components/operator/templates/httpsrv/deployment.yaml
+++ b/components/operator/templates/httpsrv/deployment.yaml
@@ -26,6 +26,7 @@ spec:
           {{- include "resources" . | nindent 10 }}
           {{- include "probes" . | nindent 10 }}
           args:
+            - -name={{ .Component.Name }}
             - -http-addr=0.0.0.0:8080
             - -https-addr=0.0.0.0:8443
             - -broker-addr=$(KUBEFOX_HOST_IP):6060
