--- a/api/crds/kubefox.xigxog.io_environments.yaml
+++ b/api/crds/kubefox.xigxog.io_environments.yaml
@@ -38,6 +38,7 @@ spec:
                 additionalProperties:
                   properties:
                     headers:
+                      type: object
                       x-kubernetes-preserve-unknown-fields: true
                     type:
                       enum:
