--- a/api/crds/kubefox.xigxog.io_releases.yaml
+++ b/api/crds/kubefox.xigxog.io_releases.yaml
@@ -45,6 +45,7 @@ spec:
                         pattern: ^[a-z0-9]{40}$
                         type: string
                       containerRegistry:
+                        format: uri
                         type: string
                       description:
                         type: string
@@ -53,6 +54,7 @@ spec:
                       name:
                         type: string
                       repoURL:
+                        format: uri
                         type: string
                       tag:
                         type: string
@@ -146,6 +148,7 @@ spec:
                     additionalProperties:
                       properties:
                         headers:
+                          type: object
                           x-kubernetes-preserve-unknown-fields: true
                         type:
                           enum:
