--- a/api/crds/kubefox.xigxog.io_platforms.yaml
+++ b/api/crds/kubefox.xigxog.io_platforms.yaml
@@ -1054,6 +1054,18 @@ spec:
                         format: int32
                         type: integer
                     type: object
+                  logFormat:
+                    enum:
+                    - json
+                    - console
+                    type: string
+                  logLevel:
+                    enum:
+                    - debug
+                    - info
+                    - warn
+                    - error
+                    type: string
                   nodeName:
                     description: NodeName is a request to schedule this pod onto a
                       specific node. If it is non-empty, the scheduler simply schedules
@@ -2493,6 +2505,18 @@ spec:
                         format: int32
                         type: integer
                     type: object
+                  logFormat:
+                    enum:
+                    - json
+                    - console
+                    type: string
+                  logLevel:
+                    enum:
+                    - debug
+                    - info
+                    - warn
+                    - error
+                    type: string
                   nodeName:
                     description: NodeName is a request to schedule this pod onto a
                       specific node. If it is non-empty, the scheduler simply schedules
@@ -2923,6 +2947,18 @@ spec:
                       type: object
                     type: array
                 type: object
+              logFormat:
+                enum:
+                - json
+                - console
+                type: string
+              logLevel:
+                enum:
+                - debug
+                - info
+                - warn
+                - error
+                type: string
               nats:
                 properties:
                   affinity:
@@ -3943,6 +3979,18 @@ spec:
                         format: int32
                         type: integer
                     type: object
+                  logFormat:
+                    enum:
+                    - json
+                    - console
+                    type: string
+                  logLevel:
+                    enum:
+                    - debug
+                    - info
+                    - warn
+                    - error
+                    type: string
                   nodeName:
                     description: NodeName is a request to schedule this pod onto a
                       specific node. If it is non-empty, the scheduler simply schedules
