cleaned, better error handling, and more
- secured http client and added options for redirect/tls verify
- unified bootstrap and component flag values
- broker now sends response errors
- added kubefox.Err
- added annotation to component deployments to allow for clean deletes
- made kit multi threaded
- added forward option to kontext

--- a/api/crds/kubefox.xigxog.io_environments.yaml
+++ b/api/crds/kubefox.xigxog.io_environments.yaml
@@ -37,9 +37,23 @@ spec:
               adapters:
                 additionalProperties:
                   properties:
+                    followRedirects:
+                      description: Defaults to never.
+                      enum:
+                      - Never
+                      - Always
+                      - SameHost
+                      type: string
                     headers:
                       type: object
                       x-kubernetes-preserve-unknown-fields: true
+                    insecureSkipVerify:
+                      description: InsecureSkipVerify controls whether a client verifies
+                        the server's certificate chain and host name. If InsecureSkipVerify
+                        is true, any certificate presented by the server and any host
+                        name in that certificate is accepted. In this mode, TLS is
+                        susceptible to machine-in-the-middle attacks.
+                      type: boolean
                     type:
                       enum:
                       - kubefox
