--- a/components/operator/templates/httpsrv/service.yaml
+++ b/components/operator/templates/httpsrv/service.yaml
@@ -1,14 +1,6 @@
 apiVersion: v1
 kind: Service
-metadata:
-  name: {{ .Component.Name }}
-  namespace: {{ namespace }}
-  labels:
-    {{- include "labels" . | nindent 4 }}
-  {{- with .Owner }}
-  ownerReferences:
-    {{- . | toYaml | nindent 4 }}
-  {{- end }}
+{{ include "metadata" . }}
 spec:
   type: {{ .Values.serviceType | default "ClusterIP" }}
   selector:
