--- a/components/operator/templates/nats/nats.conf
+++ b/components/operator/templates/nats/nats.conf
@@ -11,12 +11,12 @@ server_name: $KUBEFOX_POD
 lame_duck_duration:     30s
 lame_duck_grace_period: 10s
 
-max_payload: 5Mi
+max_payload: {{ .Values.maxContentSize | default "6Mi" }}
 
 # NATS JetStream
 jetstream {
-    max_mem:   0Gi
-    max_file:  {{ .Values.volumeSize | default "1Gi" }}
+    max_memory_store: 0
+    max_file_store:   {{ .Values.volumeSize | default "1Gi" }}
     store_dir: "/data"
 }
 
