--- a/components/operator/templates/broker/role.yaml
+++ b/components/operator/templates/broker/role.yaml
@@ -5,7 +5,7 @@ rules:
   - apiGroups:
       - kubefox.xigxog.io
     resources:
-      - deployments
+      - appdeployments
       - releases
     verbs:
       - list
