--- a/api/crds/kubefox.xigxog.io_appdeployments.yaml
+++ b/api/crds/kubefox.xigxog.io_appdeployments.yaml
@@ -4,26 +4,53 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.13.0
-  name: deployments.kubefox.xigxog.io
+  name: appdeployments.kubefox.xigxog.io
 spec:
   group: kubefox.xigxog.io
   names:
-    kind: Deployment
-    listKind: DeploymentList
-    plural: deployments
-    singular: deployment
+    kind: AppDeployment
+    listKind: AppDeploymentList
+    plural: appdeployments
+    singular: appdeployment
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: Deployment is the Schema for the Deployments API
+        description: AppDeployment is the Schema for the AppDeployments API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
               of an object. Servers should convert recognized schemas to the latest
               internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
             type: string
+          details:
+            description: AppDeploymentDetails defines additional details of AppDeployment
+            properties:
+              app:
+                properties:
+                  branch:
+                    type: string
+                  description:
+                    type: string
+                  repoURL:
+                    format: uri
+                    type: string
+                  tag:
+                    type: string
+                  title:
+                    type: string
+                type: object
+              components:
+                additionalProperties:
+                  properties:
+                    description:
+                      type: string
+                    title:
+                      type: string
+                  type: object
+                type: object
+            type: object
           kind:
             description: 'Kind is a string value representing the REST resource this
               object represents. Servers may infer this from the endpoint the client
@@ -32,29 +59,18 @@ spec:
           metadata:
             type: object
           spec:
-            description: DeploymentSpec defines the desired state of Deployment
+            description: AppDeploymentSpec defines the desired state of AppDeployment
             properties:
               app:
                 properties:
-                  branch:
-                    type: string
                   commit:
                     pattern: ^[a-z0-9]{40}$
                     type: string
                   containerRegistry:
                     type: string
-                  description:
-                    type: string
                   imagePullSecretName:
                     type: string
                   name:
-                    type: string
-                  repoURL:
-                    format: uri
-                    type: string
-                  tag:
-                    type: string
-                  title:
                     type: string
                 required:
                 - commit
@@ -73,6 +89,7 @@ spec:
                         properties:
                           type:
                             enum:
+                            - db
                             - kubefox
                             - http
                             type: string
@@ -80,17 +97,11 @@ spec:
                         - type
                         type: object
                       type: object
-                    description:
-                      type: string
                     envSchema:
                       additionalProperties:
                         properties:
-                          description:
-                            type: string
                           required:
                             type: boolean
-                          title:
-                            type: string
                           type:
                             enum:
                             - array
@@ -99,6 +110,11 @@ spec:
                             - string
                             type: string
                           unique:
+                            description: Unique indicates that this environment variable
+                              must have a unique value across all environments. If
+                              the value is not unique then making a dynamic request
+                              or creating a release that utilizes this variable will
+                              fail.
                             type: boolean
                         required:
                         - required
@@ -122,10 +138,10 @@ spec:
                         - rule
                         type: object
                       type: array
-                    title:
-                      type: string
                     type:
                       enum:
+                      - db
+                      - genesis
                       - kubefox
                       - http
                       type: string
@@ -133,13 +149,14 @@ spec:
                   - commit
                   - type
                   type: object
+                minProperties: 1
                 type: object
             required:
             - app
             - components
             type: object
           status:
-            description: DeploymentStatus defines the observed state of Deployment
+            description: AppDeploymentStatus defines the observed state of AppDeployment
             properties:
               ready:
                 type: boolean
