--- a/api/crds/kubefox.xigxog.io_environments.yaml
+++ b/api/crds/kubefox.xigxog.io_environments.yaml
@@ -24,6 +24,32 @@ spec:
               of an object. Servers should convert recognized schemas to the latest
               internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
             type: string
+          details:
+            description: EnvironmentDetails defines additional details of Environment
+            properties:
+              adapters:
+                additionalProperties:
+                  properties:
+                    description:
+                      type: string
+                    title:
+                      type: string
+                  type: object
+                type: object
+              description:
+                type: string
+              title:
+                type: string
+              vars:
+                additionalProperties:
+                  properties:
+                    description:
+                      type: string
+                    title:
+                      type: string
+                  type: object
+                type: object
+            type: object
           kind:
             description: 'Kind is a string value representing the REST resource this
               object represents. Servers may infer this from the endpoint the client
@@ -56,7 +82,7 @@ spec:
                       type: boolean
                     type:
                       enum:
-                      - kubefox
+                      - db
                       - http
                       type: string
                     url:
@@ -65,12 +91,107 @@ spec:
                   - type
                   type: object
                 type: object
+              parent:
+                properties:
+                  name:
+                    type: string
+                required:
+                - name
+                type: object
               vars:
                 type: object
                 x-kubernetes-preserve-unknown-fields: true
             type: object
           status:
             description: EnvironmentStatus defines the observed state of Environment
+            properties:
+              children:
+                items:
+                  properties:
+                    creationTimestamp:
+                      format: date-time
+                      type: string
+                    modificationTimestamp:
+                      format: date-time
+                      type: string
+                    name:
+                      minLength: 1
+                      type: string
+                    resourceVersion:
+                      type: string
+                    uid:
+                      description: UID is a type that holds unique ID values, including
+                        UUIDs.  Because we don't ONLY use UUIDs, this is an alias
+                        to string.  Being a type captures intent and helps make sure
+                        that UIDs and names do not get conflated.
+                      type: string
+                  required:
+                  - name
+                  type: object
+                type: array
+              parent:
+                properties:
+                  creationTimestamp:
+                    format: date-time
+                    type: string
+                  modificationTimestamp:
+                    format: date-time
+                    type: string
+                  name:
+                    minLength: 1
+                    type: string
+                  resourceVersion:
+                    type: string
+                  uid:
+                    description: UID is a type that holds unique ID values, including
+                      UUIDs.  Because we don't ONLY use UUIDs, this is an alias to
+                      string.  Being a type captures intent and helps make sure that
+                      UIDs and names do not get conflated.
+                    type: string
+                required:
+                - name
+                type: object
+              spec:
+                properties:
+                  resolved:
+                    properties:
+                      adapters:
+                        additionalProperties:
+                          properties:
+                            followRedirects:
+                              description: Defaults to never.
+                              enum:
+                              - Never
+                              - Always
+                              - SameHost
+                              type: string
+                            headers:
+                              type: object
+                              x-kubernetes-preserve-unknown-fields: true
+                            insecureSkipVerify:
+                              description: InsecureSkipVerify controls whether a client
+                                verifies the server's certificate chain and host name.
+                                If InsecureSkipVerify is true, any certificate presented
+                                by the server and any host name in that certificate
+                                is accepted. In this mode, TLS is susceptible to machine-in-the-middle
+                                attacks.
+                              type: boolean
+                            type:
+                              enum:
+                              - db
+                              - http
+                              type: string
+                            url:
+                              x-kubernetes-preserve-unknown-fields: true
+                          required:
+                          - type
+                          type: object
+                        type: object
+                      vars:
+                        type: object
+                        x-kubernetes-preserve-unknown-fields: true
+                    type: object
+                type: object
             type: object
         type: object
     served: true
