--- a/components/operator/templates/component/deployment.yaml
+++ b/components/operator/templates/component/deployment.yaml
@@ -6,8 +6,12 @@ metadata:
   labels:
     {{- include "labels" . | nindent 4 }}
   annotations:
+  # TODO add checksum to tell if something has changed, do for all workloads
     kubefox.xigxog.io/template-data: |
       {{- . | toJSON | nindent 6 }}
+  {{- with .Component.Annotations }}
+    {{- . | toYaml | nindent 4 }}
+  {{- end }}
   {{- with .Owner }}
   ownerReferences:
     {{- . | toYaml | nindent 4 }}
@@ -29,7 +33,7 @@ spec:
       {{- include "podSpec" . | nindent 6 }}
       containers:
         - name: {{ .Component.Name }}
-          image: {{ .Component.Image | default (printf "%s/%s:%s" .App.Registry .Component.Name .Component.Commit) | quote }}
+          image: {{ .Component.Image | quote }}
           imagePullPolicy: {{ .Component.ImagePullPolicy | default "IfNotPresent" }}
           {{- include "securityContext" . | nindent 10 }}
           {{- include "resources" . | nindent 10 }}
@@ -39,8 +43,8 @@ spec:
             - -commit={{ .Component.Commit }}
             - -broker-addr=$(KUBEFOX_HOST_IP):6060
             - -health-addr=0.0.0.0:1111
-            - -log-format={{ logFormat }}
-            - -log-level={{ logLevel }}
+            - -log-format={{ .Logger.Format | default "json" }}
+            - -log-level={{ .Logger.Level | default "info" }}
           env:
           {{- include "env" . | nindent 12 }}
             - name: KUBEFOX_COMPONENT_IP
