--- a/components/operator/templates/platform/configmap-env.yaml
+++ b/components/operator/templates/platform/configmap-env.yaml
@@ -5,6 +5,10 @@ metadata:
   namespace: {{ namespace }}
   labels:
     {{- include "labels" . | nindent 4 }}
+  {{- with .Component.Annotations }}
+  annotations:
+    {{- . | toYaml | nindent 4 }}
+  {{- end }}
   {{- with .Owner }}
   ownerReferences:
     {{- . | toYaml | nindent 4 }}
@@ -18,9 +22,9 @@ data:
   KUBEFOX_PLATFORM_NAMESPACE: {{ .Platform.Namespace | quote }}
   KUBEFOX_PLATFORM_VAULT_NAME: {{ platformVaultName | quote }}
   KUBEFOX_PLATFORM: {{ .Platform.Name | quote }}
-  {{- with .Platform.LogFormat }}
+  {{- with .Logger.Format }}
   KUBEFOX_LOG_FORMAT: {{ . | quote }}
   {{- end }}
-  {{- with .Platform.LogLevel }}
+  {{- with .Logger.Level }}
   KUBEFOX_LOG_LEVEL: {{ . | quote }}
   {{- end }}
