--- a/components/operator/templates/nats/nats.conf
+++ b/components/operator/templates/nats/nats.conf
@@ -9,9 +9,13 @@ http_port:   8222
 server_name: $KUBEFOX_POD
 
 lame_duck_duration:     30s
-lame_duck_grace_period: 10s
+lame_duck_grace_period: 0s
 
-max_payload: {{ .Values.maxContentSize | default "6Mi" }}
+max_payload: {{ .Values.maxContentSize | default "10Mi" }}
+
+{{- if eq .Logger.Level "debug" }}
+debug: true
+{{- end }}
 
 # NATS JetStream
 jetstream {
