--- a/components/operator/templates/instance/validating-webhook.yaml
+++ b/components/operator/templates/instance/validating-webhook.yaml
@@ -5,10 +5,8 @@ metadata:
   namespace: {{ namespace }}
   labels:
     {{- include "labels" . | nindent 4 }}
-  {{- with .Component.Annotations }}
   annotations:
-    {{- . | toYaml | nindent 4 }}
-  {{- end }}
+    {{- include "annotations" . | nindent 4 }}
   {{- with .Owner }}
   ownerReferences:
     {{- . | toYaml | nindent 4 }}
@@ -24,7 +22,7 @@ webhooks:
       service:
         name: {{ name }}-operator
         namespace: {{ namespace }}
-        path: /v1alpha1-platform/validate
+        path: /v1alpha1/platform/validate
     rules:
       - apiGroups:
           - kubefox.xigxog.io
