--- a/components/operator/templates/nats/configmap.yaml
+++ b/components/operator/templates/nats/configmap.yaml
@@ -5,10 +5,8 @@ metadata:
   namespace: {{ namespace }}
   labels:
     {{- include "labels" . | nindent 4 }}
-  {{- with .Component.Annotations }}
   annotations:
-    {{- . | toYaml | nindent 4 }}
-  {{- end }}
+    {{- include "annotations" . | nindent 4 }}
   {{- with .Owner }}
   ownerReferences:
     {{- . | toYaml | nindent 4 }}
