--- a/api/crds/kubefox.xigxog.io_componentspecs.yaml
+++ b/api/crds/kubefox.xigxog.io_componentspecs.yaml
@@ -1520,15 +1520,11 @@ spec:
                       minLength: 1
                       type: string
                     resourceVersion:
-                      type: string
-                    uid:
-                      description: UID is a type that holds unique ID values, including
-                        UUIDs.  Because we don't ONLY use UUIDs, this is an alias
-                        to string.  Being a type captures intent and helps make sure
-                        that UIDs and names do not get conflated.
+                      minLength: 1
                       type: string
                   required:
                   - name
+                  - resourceVersion
                   type: object
                 type: array
             type: object
