--- a/components/operator/templates/httpsrv/deployment.yaml
+++ b/components/operator/templates/httpsrv/deployment.yaml
@@ -34,6 +34,7 @@ spec:
             - -https-addr=0.0.0.0:8443
             - -broker-addr=$(KUBEFOX_HOST_IP):6060
             - -health-addr=0.0.0.0:1111
+            - -max-event-size={{ .Values.maxEventSize }}
             - -log-format={{ .Logger.Format | default "json" }}
             - -log-level={{ .Logger.Level | default "info" }}
           env:
