--- a/components/operator/templates/nats/nats.conf
+++ b/components/operator/templates/nats/nats.conf
@@ -11,7 +11,7 @@ server_name: $KUBEFOX_POD
 lame_duck_duration:     30s
 lame_duck_grace_period: 0s
 
-max_payload: {{ .Values.maxContentSize | default "10Mi" }}
+max_payload: {{ mulf .Values.maxEventSize 1.5 | int }}
 
 {{- if eq .Logger.Level "debug" }}
 debug: true
