--- a/api/crds/kubefox.xigxog.io_releases.yaml
+++ b/api/crds/kubefox.xigxog.io_releases.yaml
@@ -32,14 +32,7 @@ spec:
                 properties:
                   app:
                     properties:
-                      branch:
-                        type: string
                       description:
-                        type: string
-                      repoURL:
-                        format: uri
-                        type: string
-                      tag:
                         type: string
                       title:
                         type: string
@@ -58,8 +51,6 @@ spec:
                 type: string
               title:
                 type: string
-            required:
-            - appDeployment
             type: object
           kind:
             description: 'Kind is a string value representing the REST resource this
@@ -73,173 +64,63 @@ spec:
             properties:
               appDeployment:
                 properties:
-                  app:
-                    properties:
-                      commit:
-                        pattern: ^[a-z0-9]{40}$
-                        type: string
-                      containerRegistry:
-                        type: string
-                      imagePullSecretName:
-                        type: string
-                      name:
-                        type: string
-                    required:
-                    - commit
-                    - name
-                    type: object
-                  components:
-                    additionalProperties:
-                      properties:
-                        commit:
-                          pattern: ^[a-z0-9]{40}$
-                          type: string
-                        defaultHandler:
-                          type: boolean
-                        dependencies:
-                          additionalProperties:
-                            properties:
-                              type:
-                                enum:
-                                - db
-                                - kubefox
-                                - http
-                                type: string
-                            required:
-                            - type
-                            type: object
-                          type: object
-                        envSchema:
-                          additionalProperties:
-                            properties:
-                              required:
-                                type: boolean
-                              type:
-                                enum:
-                                - array
-                                - boolean
-                                - number
-                                - string
-                                type: string
-                              unique:
-                                description: Unique indicates that this environment
-                                  variable must have a unique value across all environments.
-                                  If the value is not unique then making a dynamic
-                                  request or creating a release that utilizes this
-                                  variable will fail.
-                                type: boolean
-                            required:
-                            - required
-                            - type
-                            - unique
-                            type: object
-                          type: object
-                        image:
-                          type: string
-                        routes:
-                          items:
-                            properties:
-                              id:
-                                type: integer
-                              priority:
-                                type: integer
-                              rule:
-                                type: string
-                            required:
-                            - id
-                            - rule
-                            type: object
-                          type: array
-                        type:
-                          enum:
-                          - db
-                          - genesis
-                          - kubefox
-                          - http
-                          type: string
-                      required:
-                      - commit
-                      - type
-                      type: object
-                    minProperties: 1
-                    type: object
                   name:
                     minLength: 1
-                    type: string
-                  resourceVersion:
-                    type: string
-                  uid:
-                    description: UID is a type that holds unique ID values, including
-                      UUIDs.  Because we don't ONLY use UUIDs, this is an alias to
-                      string.  Being a type captures intent and helps make sure that
-                      UIDs and names do not get conflated.
                     type: string
                 required:
                 - name
                 type: object
               environment:
                 properties:
-                  adapters:
-                    additionalProperties:
-                      properties:
-                        followRedirects:
-                          description: Defaults to never.
-                          enum:
-                          - Never
-                          - Always
-                          - SameHost
-                          type: string
-                        headers:
-                          type: object
-                          x-kubernetes-preserve-unknown-fields: true
-                        insecureSkipVerify:
-                          description: InsecureSkipVerify controls whether a client
-                            verifies the server's certificate chain and host name.
-                            If InsecureSkipVerify is true, any certificate presented
-                            by the server and any host name in that certificate is
-                            accepted. In this mode, TLS is susceptible to machine-in-the-middle
-                            attacks.
-                          type: boolean
-                        type:
-                          enum:
-                          - db
-                          - http
-                          type: string
-                        url:
-                          x-kubernetes-preserve-unknown-fields: true
-                      required:
-                      - type
-                      type: object
-                    type: object
                   name:
                     minLength: 1
                     type: string
                   resourceVersion:
+                    minLength: 1
                     type: string
-                  uid:
-                    description: UID is a type that holds unique ID values, including
-                      UUIDs.  Because we don't ONLY use UUIDs, this is an alias to
-                      string.  Being a type captures intent and helps make sure that
-                      UIDs and names do not get conflated.
-                    type: string
-                  vars:
-                    type: object
-                    x-kubernetes-preserve-unknown-fields: true
                 required:
                 - name
+                - resourceVersion
                 type: object
+              type:
+                enum:
+                - Promotion
+                - Release
+                - Rollback
+                type: string
               version:
-                minLength: 1
+                description: Version of the App being release. Use of semantic versioning
+                  is recommended. If set the value is compared to the AppDeployment,
+                  if they conflict the release will fail.
                 type: string
             required:
             - appDeployment
             - environment
+            - type
             type: object
           status:
             description: ReleaseStatus defines the observed state of Release
             properties:
-              ready:
-                type: boolean
+              creationTime:
+                format: date-time
+                type: string
+              failureMessage:
+                type: string
+              failureTime:
+                format: date-time
+                type: string
+              lastTransitionTime:
+                format: date-time
+                type: string
+              pendingTime:
+                format: date-time
+                type: string
+              releaseTime:
+                format: date-time
+                type: string
+              supersededTime:
+                format: date-time
+                type: string
             type: object
         type: object
     served: true
