--- a/components/operator/templates/instance/validating-webhook.yaml
+++ b/components/operator/templates/instance/validating-webhook.yaml
@@ -30,7 +30,28 @@ webhooks:
           - v1alpha1
         operations:
           - CREATE
-          - UPDATE
         resources:
           - platforms
-  
+
+  - name: immutable-policy.kubefox.xigxog.io
+    failurePolicy: Fail
+    sideEffects: None
+    admissionReviewVersions:
+      - v1
+    clientConfig:
+      caBundle: {{ .Values.caBundle }}
+      service:
+        name: {{ name }}-operator
+        namespace: {{ namespace }}
+        path: /immutable/validate
+    rules:
+      - apiGroups:
+          - kubefox.xigxog.io
+        apiVersions:
+          - v1alpha1
+        operations:
+          - UPDATE
+        resources:
+          - appdeployments
+          - releases
+          - resolvedenvironments
